# ImageGenerator

./: .gitignore  ImageGenerator.cpp  ImageGenerator.psess  ImageGenerator.sln  ImageGenerator.vcxproj  ImageGenerator.vcxproj.filters  README.md
gcc_perf_test/: CMakeLists.txt  RandomFunction.hpp  functions.h  main.cpp
include/lodepng/: lodepng.cpp
src/: CMakeLists.txt  Coloring.h  ColoringAlgorithm.h  ImageGen.vcxproj  ImageGen.vcxproj.filters  ImageGenerator.cpp  ImageGenerator.sln  ImageGenerator.vcxproj  ImageGenerator.vcxproj.filters  PolynomialColoring.h  RandomFunction.hpp  functions.h  imagegen.cpp  lodepng.cpp  lodepng.h  stdafx.h
src/BlackAndWhite/: BlackAndWhite.cpp  BlackAndWhite.vcxproj  BlackAndWhite.vcxproj.filters  ColoringAlgorithm.h  PolynomialColoring.h  stdafx.cpp  stdafx.h
